src/tests/testfiles/function-declarations/20.txt
testfiles/function-declarations/20.c:2:2: warning: 'return' with a value, in function returning void
 	return 0;
  ^
testfiles/function-declarations/20.c:11:6: error: void value not ignored as it ought to be
 	int a1 = nothing();
      ^
testfiles/function-declarations/20.c:12:7: error: variable or field 'a2' declared void
 	void a2 = nothing();
       ^
testfiles/function-declarations/20.c:12:7: error: void value not ignored as it ought to be
 	void a2 = nothing();
       ^
testfiles/function-declarations/20.c:13:7: error: void value not ignored as it ought to be
 	void *a3 = nothing();
       ^
testfiles/function-declarations/20.c:16:7: error: variable or field 'a5' declared void
 	void a5, a6 = nothing();
       ^
testfiles/function-declarations/20.c:16:11: error: variable or field 'a6' declared void
 	void a5, a6 = nothing();
           ^
testfiles/function-declarations/20.c:16:11: error: void value not ignored as it ought to be
 	void a5, a6 = nothing();
           ^
